<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startTimeInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:hint="@string/start_time_label"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/startTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:text="@string/time_placeholder" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endTimeInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:hint="@string/end_time_label"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout> 