<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/layoutDateFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="17dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etStartDate"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_date_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStartDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEndDate"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/end_date_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEndDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scrollViewChips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDateFilter">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacing="8dp"
            app:singleSelection="true"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLast7Days"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/last_7_days"
                android:textColor="@color/text_selected_chip"
                android:textSize="14sp"
                android:layout_marginStart="17dp"
                 />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLast1Month"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_1_month"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLast6Months"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_6_months"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLast1Year"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_1_year"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:layout_marginEnd="17dp"
                 />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <!-- Booking List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBookings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewChips"
        tools:listitem="@layout/item_booking" />

</androidx.constraintlayout.widget.ConstraintLayout> 